Fix unit selection, bottom align nav

--- a/theme.css
+++ b/theme.css
@@ -13,6 +13,11 @@ body {
   margin: 0px 5px;
 }
 
+.nav > li {
+  float: none;
+  display: inline-block;
+}
+
 .input-group-btn .btn{
   margin: 0px;
 }
